package board

data class Coordinate(val row: Int, val column: Int) {}
